--- a/dports/cross/avr-libc/Portfile
+++ b/dports/cross/avr-libc/Portfile
@@ -17,9 +17,8 @@ checksums			md5	22b822edcae196621482a5524dfd4bed \
 				sha1	24ad9f0636bbe1487d57894e3a45a6921674856d \
 				rmd160	2e347bb0e9d796038cd73762b7f69d906e47b21e
 
-depends_lib			port:gettext
-depends_lib			port:avr-gcc
-depends_build			port:binutils
+depends_lib			port:gettext \
+			port:avr-gcc
 
 configure.args		--host=avr --build=`./config.guess`
 configure.cc		avr-gcc
