--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -75,46 +75,8 @@ if {![variant_isset python25]} {
 }
 
 post-destroot {
-    if {[variant_isset python25]} {
-        file mkdir ${destroot}${prefix}/lib/python2.5/site-packages
-        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.5 setup.py install --prefix=${prefix} --root=${destroot}"
-    }
-
-    if {[variant_isset python26]} {
-        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.6 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.6/ --root=${destroot}"
-    }
-
-    if {[variant_isset qt4_mac]} {
-        xinstall -d ${destroot}${prefix}/libexec/qt4-mac/plugins/designer
-        move ${destroot}${prefix}/plugins/designer/libQVTKWidgetPlugin.dylib \
-            ${destroot}${prefix}/libexec/qt4-mac/plugins/designer/
-    }
-
     set vtkdest ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${vtkdest}
-
-    if {[variant_isset data]} {
-        # Provide some examples
-        file copy ${worksrcpath}/Examples ${vtkdest}
-        xinstall -W ${worksrcpath}/bin \
-            CommonCxxTests \
-            FilteringCxxTests \
-            GenericFilteringCxxTests \
-            GraphicsCxxTests \
-            IOCxxTests \
-            ImagingCxxTests \
-            RenderingCxxTests \
-            TestCxxFeatures \
-            TestInstantiator \
-            VTKBenchMark \
-            VolumeRenderingCxxTests \
-            WidgetsCxxTests \
-            ${vtkdest}/Examples
-
-        # Provide data files
-        system "tar -C ${destroot}${prefix}/share -xzvf ${distpath}/[suffix vtkdata-${version}]"
-    }
-
     xinstall -m 644 -W ${worksrcpath} Copyright.txt README.html Testing.txt ${vtkdest}
 }
 
@@ -160,6 +122,11 @@ variant python25 description {Build Python 2.5 wrappers} conflicts python26 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.5.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
+
+    post-destroot {
+        file mkdir ${destroot}${prefix}/lib/python2.5/site-packages
+        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.5 setup.py install --prefix=${prefix} --root=${destroot}"
+    }
 }
 
 variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
@@ -173,12 +140,22 @@ variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
+
+    post-destroot {
+        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.6 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.6/ --root=${destroot}"
+    }
 }
 
 variant qt4_mac conflicts x11 description {Build GUI support with Qt4 (Mac)} {
     depends_build-append    port:qt4-mac
     configure.args-append   -DVTK_USE_QT:BOOL=ON \
                             -DVTK_USE_GUISUPPORT:BOOL=ON
+
+    post-destroot {
+        xinstall -d ${destroot}${prefix}/libexec/qt4-mac/plugins/designer
+        move ${destroot}${prefix}/plugins/designer/libQVTKWidgetPlugin.dylib \
+            ${destroot}${prefix}/libexec/qt4-mac/plugins/designer/
+    }
 }
 
 variant mysql description {Build the MySQL driver for vtkSQLDatabase} {
@@ -196,4 +173,26 @@ variant data description {Install data and examples} {
                         md5     97006362d7d67dc01289daf3e4ec4e38 \
                         sha1    e0aa26dafd653da1db21fc97ce15aa0599d9c5ad \
                         rmd160  8499816f6d714408c0f7f584fb4d781f4426e444
+
+    post-destroot {
+        # Provide some examples
+        file copy ${worksrcpath}/Examples ${vtkdest}
+        xinstall -W ${worksrcpath}/bin \
+            CommonCxxTests \
+            FilteringCxxTests \
+            GenericFilteringCxxTests \
+            GraphicsCxxTests \
+            IOCxxTests \
+            ImagingCxxTests \
+            RenderingCxxTests \
+            TestCxxFeatures \
+            TestInstantiator \
+            VTKBenchMark \
+            VolumeRenderingCxxTests \
+            WidgetsCxxTests \
+            ${vtkdest}/Examples
+        
+        # Provide data files
+        system "tar -C ${destroot}${prefix}/share -xzvf ${distpath}/[suffix vtkdata-${version}]"
+    }
 }
