--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 name                qca
 version             2.0.2
-revision            4
+revision            5
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel crypto security
 maintainers         michaelld openmaintainer
@@ -97,7 +97,18 @@ variant examples description \
     }
 }
 
+platform darwin 10 {
+    post-patch {
+        # have configure use X86_64, not PPC,
+        # as the other half of "universal"
+        reinplace "s@ppc@x86_64@g" ${worksrcpath}/configure
+    }
+}
+
 variant universal {
+    # remove from universal configure flags
+    configure.universal_args-delete --disable-dependency-tracking
+    # and add in the one used by qmake
     configure.universal_args-append --universal
 }
 
