--- a/dports/x11/glxinfo/Portfile
+++ b/dports/x11/glxinfo/Portfile
@@ -42,12 +42,12 @@ if {[variant_isset universal]} {
 }
 
 build {
-	system "${configure.cc} ${configure.cppflags} ${configure.cflags} ${extra_cflags} -c ${worksrcpath}/src/xdemos/${name}.c"
-	system "${configure.cc} ${configure.ldflags} ${extra_ldflags} ${name}.o -lGL -lX11 -o ${name}"
+	system "cd ${worksrcpath} && ${configure.cc} ${configure.cppflags} ${configure.cflags} ${extra_cflags} -c ${worksrcpath}/src/xdemos/${name}.c"
+	system "cd ${worksrcpath} && ${configure.cc} ${configure.ldflags} ${extra_ldflags} ${name}.o -lGL -lX11 -o ${name}"
 }
 
 destroot {
-	xinstall -m 755 ${name} "${destroot}${prefix}/bin"
+	xinstall -m 755 "${worksrcpath}/${name}" "${destroot}${prefix}/bin"
 }
 
 use_parallel_build yes
