Updated the shogun port for gcc45 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71346 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/shogun/Portfile
+++ b/dports/math/shogun/Portfile
@@ -142,25 +142,27 @@ variant no_glpk description {Disable glpk support} {
 #   configure.args-delete --disable-doxygen
 # }
 
-variant gcc43 conflicts gcc44 description {build with gcc 4.3} {
-    depends_lib-append    port:gcc43
-    configure.cc            ${prefix}/bin/gcc-mp-4.3
-    configure.compiler      macports-gcc-4.3
-    configure.args-append   --cc=${prefix}/bin/gcc-mp-4.3 \
-                            --cxx=${prefix}/bin/g++-mp-4.3
+variant gcc43 conflicts gcc44 description {build with gcc 4.3} {}
+variant gcc44 conflicts gcc43 description {build with gcc 4.4} {}
+variant gcc45 conflicts gcc43 gcc44 description {build with gcc 4.5} {}
+
+if {[variant_isset gcc43]} {
+    set gccversion 4.3
+} elseif {[variant_isset gcc44]} {
+    set gccversion 4.4
+} else {
+    default_variants +gcc45
+    set gccversion 4.5
 }
 
-variant gcc44 conflicts gcc43 description {build with gcc 4.4} {
-    depends_lib-append    port:gcc44
-    configure.cc            ${prefix}/bin/gcc-mp-4.4
-    configure.compiler      macports-gcc-4.4
-    configure.args-append   --cc=${prefix}/bin/gcc-mp-4.4 \
-                            --cxx=${prefix}/bin/g++-mp-4.4
-}
+set gccnumber [join [split ${gccversion} .] ""]
 
-if {![variant_isset gcc43]} {
-    default_variants +gcc44
-}
+depends_lib-append      port:gcc${gccnumber}
+configure.cc            ${prefix}/bin/gcc-mp-${gccversion}
+configure.compiler      macports-gcc-${gccversion}
+configure.args-append   --cc=${prefix}/bin/gcc-mp-${gccversion} \
+                        --cxx=${prefix}/bin/g++-mp-${gccversion}
+
 
 pre-extract {
   # Before doing anything, verify the correct swig bindings are present for
