Updated the py26-pymvpa port for gcc variants. set default to gcc45. Fixed static calling of a gcc version
git-svn-id: https://svn.macports.org/repository/macports/trunk@71347 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymvpa/Portfile
+++ b/dports/python/py26-pymvpa/Portfile
@@ -34,19 +34,6 @@ depends_lib             port:py26-numpy \
 
 depends_build           port:git-core
 
-configure.env           CC=${prefix}/bin/gcc-mp-4.3 \
-                        CPP=${prefix}/bin/gcc-mp-4.3
-
-build.env           CC=${prefix}/bin/gcc-mp-4.3 \
-                    CPP=${prefix}/bin/gcc-mp-4.3 \
-                    CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
-                    CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
-
-destroot.env           CC=${prefix}/bin/gcc-mp-4.3 \
-                       CPP=${prefix}/bin/gcc-mp-4.3 \
-                       CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
-                       CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
-
 configure.args          --with-libsvm
 build.args              --with-libsvm
 patch.pre_args          -p1
@@ -55,7 +42,6 @@ patchfiles              patch-mvpa.diff setup-py.diff
 
 build.target            build_ext
 
-configure.compiler      macports-gcc-4.3
 pre-fetch {
     if {[file exists ${prefix}/share/doc/mvpa]} {
         ui_error "It appears the 2.5 version of mvpa is installed"
@@ -76,6 +62,37 @@ pre-fetch {
 variant no_shogun description {Do not build shogun} {
     depends_lib-delete port:shogun
 }
+
+variant gcc43 conflicts gcc44 description {build with gcc 4.3} {}
+variant gcc44 conflicts gcc43 description {build with gcc 4.4} {}
+variant gcc45 conflicts gcc43 gcc44 description {build with gcc 4.5} {}
+
+if {[variant_isset gcc43]} {
+    set gccversion 4.3
+} elseif {[variant_isset gcc44]} {
+    set gccversion 4.4
+} else {
+    default_variants +gcc45
+    set gccversion 4.5
+}
+
+set gccnumber [join [split ${gccversion} .] ""]
+ 
+configure.compiler      macports-gcc-${gccversion}
+configure.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
+                        CPP=${prefix}/bin/g++-mp-${gccversion}
+
+build.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
+                    CPP=${prefix}/bin/g++-mp-${gccversion} \
+                    CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
+                    CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
+
+destroot.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
+                       CPP=${prefix}/bin/g++-mp-${gccversion} \
+                       CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
+                       CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
+
+
 post-destroot {
   xinstall -m 755 -d "${destroot}${prefix}/share/doc/"
   file delete ${worksrcpath}/doc/todo.txt
