Upgraded to the 0.4.5.dev23 branch. This eliminates the need for patches to work with libsvm.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71348 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymvpa/Portfile
+++ b/dports/python/py26-pymvpa/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 PortGroup               python26 1.0
 
 name                    py26-pymvpa
-version                 0.4.4
+version                 0.4.5.dev23
 categories              python
 
 platforms               darwin
@@ -36,11 +36,11 @@ depends_build           port:git-core
 
 configure.args          --with-libsvm
 build.args              --with-libsvm
-patch.pre_args          -p1
+#patch.pre_args          -p1
 
-patchfiles              patch-mvpa.diff setup-py.diff
+#patchfiles              setup-py.diff
 
-build.target            build_ext
+build.target            build
 
 pre-fetch {
     if {[file exists ${prefix}/share/doc/mvpa]} {
@@ -82,15 +82,15 @@ configure.compiler      macports-gcc-${gccversion}
 configure.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
                         CPP=${prefix}/bin/g++-mp-${gccversion}
 
-build.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
-                    CPP=${prefix}/bin/g++-mp-${gccversion} \
-                    CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
-                    CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
+build.env-append        CC=${prefix}/bin/gcc-mp-${gccversion} \
+                        CPP=${prefix}/bin/g++-mp-${gccversion} \
+                        CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
+                        CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
 
-destroot.env           CC=${prefix}/bin/gcc-mp-${gccversion} \
-                       CPP=${prefix}/bin/g++-mp-${gccversion} \
-                       CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
-                       CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
+destroot.env-append     CC=${prefix}/bin/gcc-mp-${gccversion} \
+                        CPP=${prefix}/bin/g++-mp-${gccversion} \
+                        CCFLAGS="-I${prefix}/include -L${prefix}/lib" \
+                        CPPFLAGS="-I${prefix}/include -L${prefix}/lib"
 
 
 post-destroot {
