lmms: fix a problem building on Tiger with an SDK (which cmake does here)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71350 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/lmms/Portfile
+++ b/dports/multimedia/lmms/Portfile
@@ -50,6 +50,10 @@ configure.args-append -DWANT_ALSA=OFF \
                       -DWANT_STK=OFF \
                       -DWANT_JACK=ON
 
+platform darwin 8 {
+    configure.ldflags-append -lpng -lz
+}
+
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/projects/${name}/files/
 livecheck.regex     ${name}-(\[0-9.\]+)\\.tar
