--- a/dports/math/atlas/Portfile
+++ b/dports/math/atlas/Portfile
@@ -36,7 +36,7 @@ patchfiles          patch-ATL_AVgcc-fix.diff \
 
 dist_subdir         ${name}/${version}_${revision}
 
-checksums           atlas3.8.3.tar.bz2 \
+checksums           atlas${version}.tar.bz2 \
                     md5     6c13be94a87178e7582111c08e9503bc \
                     sha1    c7546210df4796457d9e96a00444adc4c0f2e77f \
                     rmd160  0425e630d9d0c5b7aae81427a41b7eaa18447e90 \
