Update to 1.7.4p2, add the 'openldap' variant for LDAP-enabled sudo, take over maintainership.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71352 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sudo/Portfile
+++ b/dports/sysutils/sudo/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                sudo
-version             1.6.9p21
+version             1.7.4p2
 epoch               1
 categories          sysutils security
-maintainers         nomaintainer
+maintainers         ged
 description         Allow users to run programs as other users, eg, root
 long_description \
     Sudo is a program designed to allow a sysadmin to give limited root \
@@ -21,9 +21,9 @@ homepage            http://www.sudo.ws/sudo/
 master_sites        ${homepage}dist/ \
                     ${homepage}dist/OLD/
 
-checksums           md5     14515f4ef40e9390f9937afcea981895 \
-                    sha1    a71c70ada7568293066f24f6123edf0fcd88cc0d \
-                    rmd160  9364352145224aa9cf732fedccf9fda9b3a473fa
+checksums           md5     80f3a2506f0ec3e2d75e7d17d95f5341 \
+                    sha1    575b4678fc284df73a269d74b5d3f616eb71680e \
+                    rmd160  38f8be910b8d80e396c2124bacef4b80283eac51
 
 patchfiles      patch-sudoers.diff
 
@@ -67,5 +67,16 @@ post-install {
 
 variant insults description { It can only be attributed to human error. } {
     configure.args-append   --with-insults --with-all-insults
+}
+
+variant openldap description { Add ldap support via OpenLDAP. } {
+	depends_lib-append		port:openldap
+    configure.args-append   --with-ldap
+							
+	post-destroot {
+		xinstall -d ${destroot}${prefix}/etc/openldap/schema
+		xinstall -m 0644 ${worksrcpath}/schema.OpenLDAP \
+			${destroot}${prefix}/etc/openldap/schema/sudo.schema
+	}
 }
 
