devel/valgrind-devel: Fix +openmpi variant, #26424
git-svn-id: https://svn.macports.org/repository/macports/trunk@71354 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -6,7 +6,7 @@ name            valgrind-devel
 svn.revision    11208
 set vex_revision 1986
 version         3.6.0-r${svn.revision}
-revision        1
+revision        2
 categories      devel
 platforms       darwin
 maintainers     raimue
@@ -54,7 +54,7 @@ variant mpich2 description {Use mpich2 for MPI support} {
 variant openmpi description {Use openmpi for MPI support} {
     depends_lib-append port:openmpi
     configure.args-delete --without-mpicc
-    configure.args-append --with-mpicc=${prefix}/bin/mpicc
+    configure.args-append --with-mpicc=${prefix}/bin/openmpicc
 }
 
 livecheck.type none
