Added 'debug' variant and reinplace to handle it; now matches qt4-mac. Fixed universal install. Fixed install name of the library. Rev bump to have these changes take effect.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71355 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qwtplot3d/Portfile
+++ b/dports/graphics/qwtplot3d/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                qwtplot3d
 version             0.2.7
-revision            1
+revision            2
 categories          graphics science
 platforms           darwin
 maintainers         michaelld
@@ -59,6 +59,38 @@ if {![variant_isset qwt] && ![variant_isset qwt52]} {
     default_variants    +qwt52
 }
 
+variant debug description "Build release and debug versions" {}
+
+if {![variant_isset debug]} {
+    post-patch {
+        # remove 'debug' from the qwtplot3d.pro file
+        reinplace "s@debug@@g" ${worksrcpath}/qwtplot3d.pro
+    }
+}
+
+platform darwin 9 {
+    post-patch {
+        if {[variant_isset universal]} {
+            # add both architectures to CONFIG
+            reinplace "s@\\(CONFIG.*qt\\)@\\1 x86 ppc@" ${worksrcpath}/qwtplot3d.pro
+        }
+    }
+}
+
+platform darwin 10 {
+    post-patch {
+        if {[variant_isset universal]} {
+            # add both architectures to CONFIG
+            reinplace "s@\\(CONFIG.*qt\\)@\\1 x86 x86_64@" ${worksrcpath}/qwtplot3d.pro
+        }
+    }
+}
+
+variant universal {
+    # remove from universal configure flags
+    configure.universal_args-delete --disable-dependency-tracking
+}
+
 patch {
     reinplace "s|0.2.6|${version}|g" ${worksrcpath}/qwtplot3d.pro
 }
@@ -70,4 +102,5 @@ destroot {
     system "cd ${destroot}/${prefix}/lib && ln -s lib${name}.${version}.dylib lib${name}.dylib"
     xinstall -m 755 -d  ${destroot}/${prefix}/include/${name}
     eval xinstall -m 0644 [glob ${worksrcpath}/include/*] ${destroot}/${prefix}/include/${name}
+    system "install_name_tool -id ${prefix}/lib/lib${name}.${version}.dylib ${destroot}/${prefix}/lib/lib${name}.${version}.dylib"
 }
