devel/valgrind-devel: Build for build_arch only by default; add new +universal to get both 32-bit and 64-bit support, this conflicts with the MPI variants as dependencies do not have +universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71356 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -6,7 +6,7 @@ name            valgrind-devel
 svn.revision    11208
 set vex_revision 1986
 version         3.6.0-r${svn.revision}
-revision        2
+revision        3
 categories      devel
 platforms       darwin
 maintainers     raimue
@@ -35,23 +35,40 @@ use_autoreconf yes
 configure.args  --mandir=${prefix}/share/man \
                 --without-mpicc
 
-# Handle 32-bit only
+supported_archs i386 x86_64
+
 if {$build_arch == "i386"} {
     configure.args-append --enable-only32bit
+} elseif {$build_arch == "x86_64"} {
+    configure.args-append --enable-only64bit
 }
 
 # valgrind sets up -arch by itself, adding our own interferes with the build
 configure.cc_archflags {}
 configure.ld_archflags {}
-universal_variant no
 
-variant mpich2 description {Use mpich2 for MPI support} {
+variant universal {
+    configure.args-delete --enable-only32bit --enable-only64bit
+    configure.universal_cflags {}
+    configure.universal_cxxflags {}
+    configure.universal_ldflags {}
+
+    pre-configure {
+        if {$build_arch == "i386"} {
+            # See #25684 and https://bugs.kde.org/show_bug.cgi?id=243362
+            ui_error "valgrind does not build +universal on a 32-bit only CPU!"
+            return -code error "unsupported CPU"
+        }
+    }
+}
+
+variant mpich2 description {Use mpich2 for MPI support} conflicts universal {
     depends_lib-append port:mpich2
     configure.args-delete --without-mpicc
     configure.args-append --with-mpicc=${prefix}/bin/mpicc
 }
 
-variant openmpi description {Use openmpi for MPI support} {
+variant openmpi description {Use openmpi for MPI support} conflicts universal {
     depends_lib-append port:openmpi
     configure.args-delete --without-mpicc
     configure.args-append --with-mpicc=${prefix}/bin/openmpicc
