--- a/dports/audio/openal/Portfile
+++ b/dports/audio/openal/Portfile
@@ -1,11 +1,12 @@
 # $Id$
 
 PortSystem              1.0
+PortGroup               xcode 1.0
 
 name                    openal
-version                 1.0
+version                 1.3
 categories              audio devel
-platforms               darwin
+license                 LGPL-2
 maintainers             nomaintainer
 
 description             OpenAL is a cross-platform 3D audio API
@@ -14,36 +15,20 @@ long_description        OpenAL is a cross-platform 3D audio API appropriate \
                         of audio applications.
 
 homepage                http://www.openal.org/
-master_sites            macports
-#svn.url                 http://opensource.creative.com/repos/openal/tags/MacOSX1-2_Spec1-0/
-checksums               sha1 156d26e6369b13efe9a525cb0db9e6078ecb05a9
+master_sites            sourceforge:macports
 use_bzip2               yes
+checksums               sha1 16c230864a68c00910c5e5821ac34c795ec46458 \
+                        rmd160 35348268e975dc7ce5fecf30430ee4f748103921
 
-worksrcdir              openal-1.0/macosx
+# distfile exported from svn://connect.creativelabs.com/OpenAL/tags/MacOSX1-3_Spec1-1
+worksrcdir              ${name}-${version}/OpenAL-MacOSX
 
-patch {
-    reinplace "s/CADebugMacros.cp/CADebugMacros.cpp/g" ${worksrcpath}/al_osx.pbproj/project.pbxproj
-    reinplace "s/CADebugMacros.cp/CADebugMacros.cpp/g" ${worksrcpath}/al_osx.xcode/project.pbxproj
-}
+xcode.target            OpenAL
+xcode.destroot.type     framework
 
-use_configure           no
-
-build.type              pbx
-build.target
-build.args              -project al_osx.xcode
-post-build {
-    file copy ${filespath}/Makefile ${worksrcpath}
-    system "cd ${worksrcpath} && make all PREFIX=${prefix}"
-}
-
-destroot {
-    xinstall -m 755 -d ${destroot}${prefix}/include/openal
-    xinstall -m 644 -W ${worksrcpath}/al al.h alc.h alctypes.h altypes.h \
-        alut.h ${destroot}${prefix}/include/openal
-    xinstall -m 644 ${worksrcpath}/libopenal1.0.0.dylib \
-        ${destroot}${prefix}/lib
-    system "cd ${destroot}${prefix}/lib \
-        && ln -s libopenal1.0.0.dylib libopenal1.0.dylib \
-        && ln -s libopenal1.0.0.dylib libopenal1.dylib \
-        && ln -s libopenal1.0.0.dylib libopenal.dylib"
+if {${os.major} <= 9} {
+    post-patch {
+        reinplace "s|Extras/CoreAudio/PublicUtility|Examples/CoreAudio/PublicUtility|g" \
+                  ${worksrcpath}/OpenAL.xcodeproj/project.pbxproj
+    }
 }
