libdmapsharing: update to 2.1.2; see #26415
git-svn-id: https://svn.macports.org/repository/macports/trunk@71360 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libdmapsharing/Portfile
+++ b/dports/devel/libdmapsharing/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            libdmapsharing
-version         1.9.0.12
+version         2.1.2
 categories	devel
 maintainers     flyn.org:mike
 
@@ -21,4 +21,6 @@ platforms	darwin
 depends_lib     port:avahi \
                 port:libsoup
 
-checksums       md5 cdee03bd814ee0021504b7ce3ca5708e
+checksums       md5     0ce29319255eca7cc9ffcf751d04ada6 \
+                sha1    ac1b5c3d6abed3003316dd0e8890863f57bf4030 \
+                rmd160  706d8c2427c1deae44aefc929545efe71adfaf09
