devel/valgrind: Fix +openmpi variant, #26424
git-svn-id: https://svn.macports.org/repository/macports/trunk@71361 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind/Portfile
+++ b/dports/devel/valgrind/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            valgrind
 version         3.5.0
+revision        1
 categories      devel
 platforms       darwin
 maintainers     raimue
@@ -48,7 +49,7 @@ variant mpich2 description {Use mpich2 for MPI support} {
 variant openmpi description {Use openmpi for MPI support} {
     depends_lib-append port:openmpi
     configure.args-delete --without-mpicc
-    configure.args-append --with-mpicc=${prefix}/bin/mpicc
+    configure.args-append --with-mpicc=${prefix}/bin/openmpicc
 }
 
 livecheck.type  regex
