dmapd: maintainer update to 0.0.27; see #26414
git-svn-id: https://svn.macports.org/repository/macports/trunk@71362 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/dmapd/Portfile
+++ b/dports/multimedia/dmapd/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                dmapd
-version             0.0.15
+version             0.0.27
 description         A server that provides DAAP and DPAP shares.
 long_description    The dmapd project provides a GObject-based, Open Source implementation of DMAP sharing.
 maintainers         flyn.org:mike
@@ -13,10 +13,12 @@ platforms           darwin
 homepage            http://www.flyn.org/projects/dmapd/
 master_sites        ${homepage}
 
-checksums           md5     d1b81cc2a5f3d4bb76366d12914cfcc9 \
-                    sha1    ab900436687cea2a2ab49cda06d3f121155226ec
+checksums           md5     d0ae572e0db7aa09c00decce7101363c \
+                    sha1    2452a7cf3c2565366bcb1f1c9e0d6072f8637813
 
 depends_lib         port:libdmapsharing \
-                    port:avahi \
-                    port:libexif \
-                    port:libsoup
+                    port:libsoup \
+                    port:vips
+
+# vips is not universal
+universal_variant   no
