libproxy: update to version 0.4.6    * patch cmake files to allow installation of modules and pkgconfig files on APPLE platforms    * update dependencies, variants and configuration    * disable pacrunner modules for now due to issues    * correctly configure python bindings for python26    * addresses tickets #24127, #24243, #24282, #26219, #26261
git-svn-id: https://svn.macports.org/repository/macports/trunk@71365 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libproxy/Portfile
+++ b/dports/net/libproxy/Portfile
@@ -6,9 +6,8 @@ PortGroup           archcheck 1.0
 PortGroup           cmake 1.0
 
 name                libproxy
-version             0.4.0
+version             0.4.6
 epoch               1
-revision            4
 categories          net
 maintainers         devans openmaintainer
 platforms           darwin
@@ -22,67 +21,55 @@ long_description    Libproxy exists to answer the question: Given a \
                     network resource, how do I reach it? It handles all \
                     the details, enabling you to get back to programming.
 
-checksums           md5     b22c95df70a40949e99add5171fc3084 \
-                    sha1    4d9dc92dd40255a51e541099b39d9852563dbc6a \
-                    rmd160  9375f6926cf7c301e4f96a018ca5278c7c8c5c45
+checksums           md5     199c6b120baf1f7258a55f38d5ec74f5 \
+                    sha1    6e9745c87b774f34bf53f07a54284c0d72020e94 \
+                    rmd160  f5f03c84ad2d87fe728869fadc669628737c639e
 
-post-patch {
-    if {![variant_isset kde]} {
-        reinplace /px_check_modules(KDE4/d \
-            ${worksrcpath}/libproxy/CMakeLists.txt
-    }
-}
+patchfiles          patch-libproxy-cmake.diff
 
 depends_build-append \
-    port:pkgconfig
+                    port:pkgconfig
 
-depends_lib \
-    port:xorg-libX11 \
-    port:xorg-libXmu \
-    port:gconf \
-    port:python26
+depends_lib         port:gconf \
+                    port:python26 \
+                    port:perl5
 
-# patch to libproxy/modules/config_gnome.cpp corresponds to upstream commit r628
-# patch to libproxy/CMakeLists.txt corresponds to upstream commit r587
-# patch to libproxy/modules/pacrunner_webkit.cpp corresponds to upstream commits r608 and r616
-# patch to libproxy/libproxy-1.0.pc.in corresponds to upstream commit r622 
-patchfiles          patch-fnonblock.diff \
-                    patch-libproxy-CMakeLists.txt.diff \
-                    patch-libproxy-modules-pacrunner_webkit.cpp.diff \
-                    patch-libproxy-libproxy-1.0.pc.in.diff
-
-configure.args-append \
-    -D__pkg_config_checked_KDE4=YES
-
+set python_prefix   ${frameworks_dir}/Python.framework/Versions/2.6
 configure.python    ${prefix}/bin/python2.6
 
-variant no_gnome description "Disable GNOME support" {
-    post-patch {
-        reinplace /px_check_modules(GNOME/d \
-            ${worksrcpath}/libproxy/CMakeLists.txt
-    }
+#
+# webkit and mozjs pacrunners disabled by default due to the
+# following issues
+#
+# webkit pacrunner circular dependency problem
+# webkit-gtk -> libsoup -> libproxy -> webkit-gtk (#26261)
+#
+# pac files support not available on Tiger (#24127)
+#
+# TODO: add variants that safely enable these features
+#
 
-    depends_lib-delete port:gconf
+configure.args-append \
+                    -DWITH_GNOME=YES \
+                    -DWITH_KDE4=NO \
+                    -DWITH_WEBKIT=NO \
+                    -DWITH_MOZJS=NO \
+                    -DWITH_NM=NO \
+                    -DWITH_VALA=NO \
+                    -DWITH_PERL=YES \
+                    -DWITH_PYTHON=YES \
+                    -DPYTHON_SITEPKG_DIR=${python_prefix}/lib/python2.6/site-packages
+
+variant no_gnome description {Disable GNOME plugin} {
+        configure.args-delete -DWITH_GNOME=YES
+        configure.args-append -DWITH_GNOME=NO
+        depends_lib-delete port:gconf
 }
 
-variant no_x11 requires no_gnome conflicts kde {
-        post-patch {
-            reinplace /px_check_modules(X11/d \
-                ${worksrcpath}/libproxy/CMakeLists.txt
-        }
-
-        depends_lib-delete port:xorg-libX11 port:xorg-libXmu
-}
-
-variant kde conflicts no_x11 description {Enable kde plugin (requires X11)} {
-        depends_lib-append port:kde4libs
-        configure.args-delete -D__pkg_config_checked_KDE4=YES
-}
-
-platform darwin 8 {
-	patchfiles-append patch-libproxy-CMakeLists.txt.2.diff
-    notes "PAC files support is not available in Tiger.
-see https://trac.macports.org/ticket/24127"
+variant kde description {Enable KDE4 plugin} {
+        configure.args-delete -DWITH_KDE4=NO
+        configure.args-append -DWITH_KDE4=YES
+        depends_lib-append port:kdelibs4
 }
 
 livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
