org-mode: update to 7.01h
git-svn-id: https://svn.macports.org/repository/macports/trunk@71366 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/org-mode/Portfile
+++ b/dports/editors/org-mode/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                org-mode
-version             7.01g
+version             7.01h
 categories          editors
 maintainers         dports
 platforms           darwin
@@ -19,9 +19,9 @@ homepage            http://orgmode.org/
 master_sites        ${homepage}
 distname            org-${version}
 
-checksums           md5     a06a2377779252a87e1e9876db3a042f \
-                    sha1    c627afb09695e95c43297cdf2a11a1d8221d9631 \
-                    rmd160  92664ec5ae3bd4a9859b5e9924af686f2b512a8f
+checksums           md5     111db7b77eb420b5695a109799b723f8 \
+                    sha1    0fc8b62e1a2582b9af6238c847ff1fd50522904f \
+                    rmd160  23a529d6844746f2373021ee6324946f4fb4cbf4
 
 depends_lib         port:emacs
 depends_build       port:texinfo
