--- a/dports/science/gromacs-double/Portfile
+++ b/dports/science/gromacs-double/Portfile
@@ -5,7 +5,7 @@
 PortSystem  1.0
 PortGroup   muniversal 1.0
 name		gromacs-double
-version		4.0.7
+version		4.5.1
 revision	1
 categories	science math
 maintainers	adfernandes openmaintainer
@@ -26,7 +26,11 @@ homepage	    http://www.gromacs.org/
 master_sites	ftp://ftp.gromacs.org/pub/gromacs \
                 http://cluster.earlham.edu/detail/home/charliep/packages
 
-checksums       sha1 8519bef2fa989fb487d54612b0a2d0228f228b30
+checksums           md5     d4b737b0bea8a9390d2c3ad9b159914d \
+                    sha1    cbe52c3ec613fe8b652cd24b86c4fdf31b58c71b \
+                    rmd160  116ca5bc4644d1460086cfb2097961abd11db63b
+
+depends_build   port:pkgconfig
 
 depends_lib 	port:fftw-3 port:libxml2 port:openmotif port:gromacs
 
@@ -48,23 +52,28 @@ variant openmpi description {build using openmpi parallelization} {
     configure.args-append   --enable-mpi
 }
 
-if { ![variant_isset gcc42] && ![variant_isset gcc43] && ![variant_isset gcc44] } {
+if { ![variant_isset gcc42] && ![variant_isset gcc43] && ![variant_isset gcc44] && ![variant_isset gcc45]} {
     default_variants-append     +gcc44
 }
 
-variant gcc42 conflicts gcc43 gcc44 description {build with macports-gcc-4.2} {
+variant gcc42 conflicts gcc43 gcc44 gcc45 description {build with macports-gcc-4.2} {
     depends_lib         port:gcc42
     configure.compiler  macports-gcc-4.2
 }
 
-variant gcc43 conflicts gcc42 gcc44 description {build with macports-gcc-4.3} {
+variant gcc43 conflicts gcc42 gcc44 gcc45 description {build with macports-gcc-4.3} {
     depends_lib         port:gcc43
     configure.compiler  macports-gcc-4.3
 }
 
-variant gcc44 conflicts gcc42 gcc43 description {build with macports-gcc-4.4} {
+variant gcc44 conflicts gcc42 gcc43 gcc45 description {build with macports-gcc-4.4} {
     depends_lib         port:gcc44
     configure.compiler  macports-gcc-4.4
+}
+
+variant gcc45 conflicts gcc42 gcc43 gcc44 description {build with macports-gcc-4.5} {
+    depends_lib         port:gcc45
+    configure.compiler  macports-gcc-4.5
 }
 
 post-destroot {
