lv2core: set destroot.violate_mtree yes, closes #23758.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71368 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/lv2core/Portfile
+++ b/dports/audio/lv2core/Portfile
@@ -35,7 +35,14 @@ build.target    build
 destroot.cmd    ./waf
 destroot.destdir --destdir=${destroot}
 
+#
+# port installs audo plugin support files  at
+# /Library/Audio/Plug-Ins/LV2
+# this is normal
+#
+ 
+destroot.violate_mtree yes
+
 livecheck.type  regex
 livecheck.url   ${homepage}
 livecheck.regex <a href="http://lv2plug.in/spec/${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}">LV2 Core Package
-
