lv2core: fix typos in comment.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71369 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/lv2core/Portfile
+++ b/dports/audio/lv2core/Portfile
@@ -36,7 +36,7 @@ destroot.cmd    ./waf
 destroot.destdir --destdir=${destroot}
 
 #
-# port installs audo plugin support files  at
+# port installs audio plugin support files at
 # /Library/Audio/Plug-Ins/LV2
 # this is normal
 #
