libtorrent-rasterbar: update to version 0.15.3.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71374 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libtorrent-rasterbar/Portfile
+++ b/dports/net/libtorrent-rasterbar/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            libtorrent-rasterbar
-version         0.15.2
-revision        1
+version         0.15.3
 categories      net
 maintainers     devans openmaintainer
 platforms       darwin
@@ -22,9 +21,9 @@ long_description \
 universal_variant  no
 use_parallel_build no
 
-checksums       md5     fdc146b0b89edf45c841bfd8b8e78f37 \
-                sha1    e336424824f46bedb189dcbe904393f03cc780a3 \
-                rmd160  d38c6df0e2be2268ba3271f7b9385203d89b614d
+checksums       md5     c10abfbe45472fa4d22eb2a089bac329 \
+                sha1    1d49a807ea2340f810b2c553c217c074c1e82be5 \
+                rmd160  a915b14524eb9c57129eeed7874bd44efc093a48
 
 depends_build   port:pkgconfig
 
@@ -66,8 +65,7 @@ pre-extract {
         }
 }
 
-patchfiles      patch-bindings-python-setup.py.in.diff \
-                patch-include-libtorrent-udp_socket.hpp.diff
+patchfiles      patch-bindings-python-setup.py.in.diff
 
 post-patch      {
                     reinplace "s|__MP_BUILD_ARCH__|${build_arch}|" ${worksrcpath}/bindings/python/setup.py.in
