slv2: update to version 0.6.6, not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71376 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/slv2/Portfile
+++ b/dports/audio/slv2/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            slv2
-version         0.6.1
+version         0.6.6
 maintainers     devans
 categories      audio
 platforms       darwin
@@ -19,9 +19,9 @@ master_sites    http://download.drobilla.net/
 
 use_bzip2       yes
 
-checksums       md5     c298b372d2229920a96b5bf2eb5fd5b2 \
-                sha1    8fca1e9923b3939152cac634f1f135da0c126bfa \
-                rmd160  62eb80f6789dda05a232863d07957e1855bd62dc
+checksums       md5     b8e8e0e82dd04324fcd533e8acd1ce85 \
+                sha1    7dc47153b1468056b0e30b1175c7fc57b184aaec \
+                rmd160  8cba154a2eba0c1274a65e04e4adee309e7b4e37
 
 depends_build   port:pkgconfig
 
@@ -40,6 +40,12 @@ build.target    build
 
 destroot.cmd    ./waf
 destroot.destdir --destdir=${destroot}
+
+#
+# lv2core is not universal
+#
+
+universal_variant no
 
 variant docs description {Enable building of API documentation} {
         configure.args-append --build-docs
