avr-libc: update to 1.7.0 (#24377) and add new maintainer
git-svn-id: https://svn.macports.org/repository/macports/trunk@71382 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/avr-libc/Portfile
+++ b/dports/cross/avr-libc/Portfile
@@ -1,11 +1,12 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 
 name                avr-libc
-version             1.6.1
+version             1.7.0
 categories          cross
-maintainers         nomaintainer
+maintainers         v9g.de:titus
 description         C library for the AVR microcontroller.
 long_description    AVR Libc is a Free Software project whose goal is \
                     to provide a high quality C library for use with \
@@ -15,9 +16,9 @@ homepage            http://www.nongnu.org/avr-libc/
 master_sites        http://savannah.nongnu.org/download/avr-libc/
 
 use_bzip2           yes
-checksums           md5 22b822edcae196621482a5524dfd4bed \
-                    sha1    24ad9f0636bbe1487d57894e3a45a6921674856d \
-                    rmd160  2e347bb0e9d796038cd73762b7f69d906e47b21e
+checksums           md5 3eff7b779bd950400cb0a45f3c2fb377 \
+		    sha1 38d1d52174a6afaf6f5cddbc29af49b586cfde2f \
+		    rmd160 6be7e8cc7e05c84dc5bb706d466f603941ec0dce
 
 depends_lib         port:gettext \
                     port:avr-gcc
