Fix #25465, change to version 7
git-svn-id: https://svn.macports.org/repository/macports/trunk@71383 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/android/Portfile
+++ b/dports/java/android/Portfile
@@ -5,10 +5,10 @@
 PortSystem 1.0
 
 name		    android
-version		    6
+version		    7
 revision	    0
 categories	    java devel emulators
-maintainers	    krischik
+maintainers	    openmaintainer, krischik
 platforms	    darwin
 description	    Android SDK
 long_description							\
@@ -16,10 +16,10 @@ long_description							\
 
 set patchversion    68759
 set appbundles	    ${name}-appbundles-r${patchversion}.tar.gz
-set prog	    ${name}-sdk_r0${version}-mac_86.zip
+set prog	    ${name}-sdk_r0${version}-mac_x86.zip
 
 homepage	    http://developer.${name}.com/
-master_sites	    http://dl.google.com/${name}::prog			\
+master_sites	    http://dl.google.com/${name}:prog			\
 		    macports:${name}:appbundles
 distfiles	    ${prog}:prog										\
 		    ${appbundles}:appbundles
@@ -50,7 +50,6 @@ post-extract {
 	system "unzip -q ${distpath}/${prog} -d ${workpath}"
 }
 
-    
 destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/java
 
